--- a/index.ipynb
+++ b/index.ipynb
@@ -338,15 +338,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    return "
    ]
   },
   {
