--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    a = street\n",
+    "    a = street_distance*street\n",
     "   return street_distance()**2 + avenue_distance()**2"
    ]
   },
