Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,7 @@
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
     "    a = street_distance*street_distance\n",
-    "    b = avenue_dis\n",
+    "    b = avenue_distance*avenue_disatn\n",
     "   return street_distance()**2 + avenue_distance()**2"
    ]
   },
