Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -292,14 +292,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<ipython-input-26-80cd0446f65f>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-80cd0446f65f>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return street_distance()**2 + avenue_distance()**2\u001b[0m\n\u001b[0m                                                      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
     "    a = street_distance*street_distance\n",
-    "    b = avenue_distance*avenue_disatn\n",
-    "   return street_distance()**2 + avenue_distance()**2"
+    "    b = avenue_distance*avenue_distance\n",
+    "    re"
    ]
   },
   {
