--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    a = street_distance*street_distance\n",
+    "    a = int(street_distance)*int(street_distance\n",
     "    b = avenue_distance*avenue_distance\n",
     "    return a+b"
    ]
