--- a/index.ipynb
+++ b/index.ipynb
@@ -297,8 +297,8 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    a = int(street_distance)*int(street_distance\n",
-    "    b = avenue_distance*avenue_distance\n",
+    "    a = int(street_distance)*int(street_distance)\n",
+    "    b = int(avenue_distance*avenue_distance\n",
     "    return a+b"
    ]
   },
