--- a/index.ipynb
+++ b/index.ipynb
@@ -297,9 +297,8 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    a = int(street_distance)*int(street_distance)\n",
-    "    b = int(avenue_distance)*int(avenue_distance)\n",
-    "    return a+b"
+    "\n",
+    "    return street_distance(first_neighbor, second_neighbor)**2 + avenue_distance(first_neighbor, second_neighbor)**2"
    ]
   },
   {
